# RestrauntPlatform

./: README.md
Zomato/: CMakeLists.txt  Feedback  main.cpp
Zomato/headers/: Amount.h  Application.h  Menu.h  Order.h  SelectionStrategy.h
Zomato/services/: LowestCostSelectionStrategy.cpp  LowestCostSelectionStrategy.h  Restraunt.cpp  Restraunt.h  Zomato.cpp  Zomato.h
